Fix up showcase view with word-wrap and ellipses

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,10 +9,9 @@
 // FOR THE SHOWCASE
 .longer-description {
   background: rgba(140, 140, 140, 0.8);
-  height: 170px;
-  overflow: auto;
-  text-wrap: wrap;
-  padding: 10px;
+  height: 265px;
+  overflow: hidden;
+  padding: 5px 10px;
 }
 
 .visible-users {
@@ -36,6 +35,12 @@
 }
 
 .brief-description {
+  color: #444;
   font-size: 23px;
   border-radius: 8px;
+  font-weight: bold;
+  text-shadow: 0px 1px 0px #b2a98f,
+             0px 2px 10px rgba(0,0,0,0.15),
+             0px 5px 2px rgba(0,0,0,0.1),
+             0px 8px 30px rgba(0,0,0,0.05);
 }
